@@ -135,7 +135,7 @@ bundled_files = find_libraries(C.opencv_runtime_library_dirs, C.opencv_runtime_l
 
 setup(
     name = "pyopencv",
-	version = '2.0.wr1.0.1',
+	version = '2.0.wr1.0.2',
 	description = DOCLINES[0],
 	author = 'Minh-Tri Pham',
 	author_email = 'pmtri80@gmail.com',
