@@ -5,6 +5,10 @@ PyOpenCV - A Python wrapper for OpenCV 2.0 using Boost.Python and NumPy
 Change Log
 ==========
 
+pyopencv-2.0.wr1.0.2 beta release
+- to be updated
+---------------------------------
+
 pyopencv-2.0.wr1.0.1 beta release
 ---------------------------------
 
